--- a/src/VsChromium/Features/ToolWindows/CodeSearch/CodeSearchControl.xaml
+++ b/src/VsChromium/Features/ToolWindows/CodeSearch/CodeSearchControl.xaml
@@ -394,7 +394,6 @@
           <Style x:Key="PathTextStyle" TargetType="TextBlock">
             <Setter Property="FontFamily" Value="{Binding DataContext.PathFontFamily, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"/>
             <Setter Property="FontSize" Value="{Binding DataContext.PathFontSize, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"/>
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static theme:VsResources.PathForeground}}" />
           </Style>
 
           <Style x:Key="DisplayTextStyle" TargetType="TextBlock">
@@ -426,12 +425,24 @@
                   <MenuItem Header="Copy Relative Path  with &quot;/&quot;" Command="{Binding CopyRelativePathPosixCommand}" />
                 </ContextMenu>
               </Grid.ContextMenu>
-              <TextBlock Grid.Column="0" Text="{Binding DisplayText}" Style="{StaticResource PathTextStyle}" />
+              <TextBlock Grid.Column="0" Text="{Binding DisplayText}">
+                <TextBlock.Style>
+                  <Style TargetType="TextBlock">
+                    <Setter Property="FontFamily" Value="{Binding DataContext.PathFontFamily, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"/>
+                    <Setter Property="FontSize" Value="{Binding DataContext.PathFontSize, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"/>
+                    <Style.Triggers>
+                      <DataTrigger Binding="{Binding HasMatchText}" Value="True">
+                        <Setter Property="Foreground" Value="{DynamicResource {x:Static theme:VsResources.PathForeground}}" />
+                      </DataTrigger>
+                    </Style.Triggers>
+                  </Style>
+                </TextBlock.Style>
+              </TextBlock>
               <TextBlock Grid.Column="1" Text="{Binding LineColumnText}" Style="{StaticResource TextExtractTextStyle}"
                        Foreground="{DynamicResource {x:Static theme:VsResources.LineColumnForeground}}"  />
               <TextBlock Grid.Column="2" Text="{Binding ItemCountText}" Style="{StaticResource PathTextStyle}" FontStyle="Italic" />
               <TextBlock Grid.Column="3" Text="{Binding TextBeforeMatch}" Style="{StaticResource TextExtractTextStyle}" />
-              <TextBlock Grid.Column="4" Text="{Binding MatchText}" Style="{StaticResource TextExtractTextStyle}"
+              <TextBlock Grid.Column="4" Text="{Binding MatchText}" Style="{StaticResource TextExtractTextStyle}" Name="MatchText"
                        Foreground="{DynamicResource {x:Static theme:VsResources.SearchMatchHighlightForeground}}"
                        Background="{DynamicResource {x:Static theme:VsResources.SearchMatchHighlightBackground}}" />
               <TextBlock Grid.Column="5" Text="{Binding TextAfterMatch}" Style="{StaticResource TextExtractTextStyle}"/>
