--- a/src/VsChromium/Features/ToolWindows/OpenFile/OpenFileControl.xaml
+++ b/src/VsChromium/Features/ToolWindows/OpenFile/OpenFileControl.xaml
@@ -38,7 +38,7 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Thumb}">
                         <Border Padding="{TemplateBinding Padding}" Background="Transparent">
-                            <Rectangle HorizontalAlignment="Center" Width="1" Fill="{DynamicResource {x:Static vsfx:VsBrushes.AccentBorderKey}}"/>
+                            <Rectangle HorizontalAlignment="Center" Width="1" Fill="{DynamicResource {x:Static vsfx:VsBrushes.ActiveBorderKey}}"/>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
@@ -78,7 +78,7 @@
                                 <Setter TargetName="SelectionBorder" Property="Visibility" Value="Visible"/>
                                 <Setter TargetName="Selection" Property="Background" Value="{DynamicResource {x:Static vsfx:VsBrushes.HighlightKey}}"/>
                                 <Setter TargetName="SelectionBorder" Property="BorderBrush" Value="{DynamicResource {x:Static vsfx:VsBrushes.HighlightKey}}"/>
-                                <Setter Property="Foreground" Value="{DynamicResource {x:Static vsfx:VsBrushes.HighlightTextKey}}" />
+                                <Setter Property="Foreground" Value="{DynamicResource VsBrush.ToolWindowText}" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -115,7 +115,7 @@
                                             RecognizesAccessKey="True"
                                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                                     </Border>
-                                    <Rectangle Grid.Row="2" Height="1" Fill="{DynamicResource {x:Static vsfx:VsBrushes.AccentBorderKey}}"/>
+                                    <Rectangle Grid.Row="2" Height="1" Fill="{DynamicResource {x:Static vsfx:VsBrushes.ActiveBorderKey}}"/>
                                 </Grid>
                             </Border>
                             <Canvas>
@@ -147,7 +147,7 @@
             <RowDefinition Height="4" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" BorderThickness="1" BorderBrush="{DynamicResource {x:Static vsfx:VsBrushes.AccentBorderKey}}">
+        <Border Grid.Row="0" BorderThickness="1" BorderBrush="{DynamicResource {x:Static vsfx:VsBrushes.ActiveBorderKey}}">
             <ListView
                 d:DataContext="{StaticResource mockViewModel}"
                 ItemsSource="{Binding FileList}"
